k8s/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ${CI_PROJECT_NAME}-limits
  namespace: ${NAMESPACE}
spec:
  buffering:
    maxRequestBodyBytes: 629145600 # 600m
    memRequestBodyBytes: 629145600


# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: ${CI_PROJECT_NAME}-add-trailing-slash
#   namespace: ${NAMESPACE}
# spec:
#   redirectRegex:
#     regex: "^(https?://[^/]+/[^/]*[^/])$"
#     replacement: "${1}/"
#     permanent: true
