k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${CI_PROJECT_NAME} #sesuaikan dengan nama deployment
  labels:
    app: ${NAMESPACE}
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "${NAMESPACE}-${CI_PROJECT_NAME}-limits@kubernetescrd" # ${NAMESPACE}-add-trailing-slash@kubernetescrd"
    traefik.ingress.kubernetes.io/servers-transport: "${CI_PROJECT_NAME}-transport"
spec:
  ingressClassName: traefik
  rules:
    - host: ${INGRESS_URL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${CI_PROJECT_NAME} #sesuaikan dengan nama deployment
                port:
                  number: 80
  tls:
    - hosts:
        - ${INGRESS_URL}
